// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blog Post Template Should render correctly with full post data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="margin-left: auto; margin-right: auto; max-width: 42rem; padding: 2.625rem 1.3125rem;"
      >
        <header>
          <h3
            style="font-family: Montserrat, sans-serif; margin-top: 0px;"
          >
            <a
              href="/"
              style="box-shadow: none;"
            >
              post2
            </a>
          </h3>
        </header>
        <main>
          <article>
            <header>
              <h1
                style="margin-top: 1.75rem; margin-bottom: 0px;"
              >
                post2
              </h1>
              <p
                style="font-size: 0.83255rem; line-height: 1.75rem; display: block; margin-bottom: 1.75rem;"
              >
                Apr 11, 2021
              </p>
            </header>
            <div
              class="gatsby-image-wrapper gatsby-image-wrapper-constrained"
              data-gatsby-image-wrapper=""
              style="position: relative; overflow: hidden; display: inline-block;"
            >
              <div
                style="max-width: 628px; display: block;"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  role="presentation"
                  src="data:image/svg+xml;charset=utf-8,%3Csvg height='396' width='628' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                  style="max-width: 100%; display: block; position: static;"
                />
              </div>
              <div
                aria-hidden="true"
                data-placeholder-image=""
                style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
              />
              <picture>
                <source
                  data-srcset="//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=157&h=99&q=50&fm=webp 157w,//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=314&h=198&q=50&fm=webp 314w,//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=628&h=396&q=50&fm=webp 628w"
                  sizes="(min-width: 628px) 628px, 100vw"
                  type="image/webp"
                />
                <img
                  alt="post2"
                  data-gatsby-image-ssr=""
                  data-main-image=""
                  data-src="//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=628&h=396&q=50&fm=png"
                  data-srcset="//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=157&h=99&q=50&fm=png 157w,//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=314&h=198&q=50&fm=png 314w,//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=628&h=396&q=50&fm=png 628w"
                  decoding="async"
                  loading="lazy"
                  sizes="(min-width: 628px) 628px, 100vw"
                  style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
                />
              </picture>
              <noscript />
              <script
                type="module"
              >
                const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
              </script>
            </div>
            <section>
              <h1>
                Test HTML
              </h1>
            </section>
            <hr
              style="margin-bottom: 1.75rem;"
            />
            <footer>
              <div
                style="display: flex; margin-bottom: 4.375rem;"
              >
                <div
                  class="gatsby-image-wrapper"
                  data-gatsby-image-wrapper=""
                  style="position: relative; overflow: hidden; width: 150px; height: 150px; margin-right: 0.875rem; margin-bottom: 0px; min-width: 50px; border-radius: 100%;"
                >
                  <div
                    aria-hidden="true"
                    data-placeholder-image=""
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=750&h=500&q=50&fm=webp 750w,//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=1500&h=1000&q=50&fm=webp 1500w,//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=3000&h=2000&q=50&fm=webp 3000w"
                      sizes="(min-width: 3000px) 3000px, 100vw"
                      type="image/webp"
                    />
                    <img
                      alt="author name"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=3000&h=2000&fl=progressive&q=50&fm=jpg"
                      data-srcset="//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=750&h=500&fl=progressive&q=50&fm=jpg 750w,//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=1500&h=1000&fl=progressive&q=50&fm=jpg 1500w,//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=3000&h=2000&fl=progressive&q=50&fm=jpg 3000w"
                      decoding="async"
                      loading="lazy"
                      sizes="(min-width: 3000px) 3000px, 100vw"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                  </script>
                </div>
                <p>
                  Written by 
                  <strong>
                    author name
                  </strong>
                  <span>
                    body html
                  </span>
                </p>
              </div>
            </footer>
          </article>
          <nav>
            <ul
              style="display: flex; flex-wrap: wrap; justify-content: space-between; list-style: none; padding: 0px;"
            >
              <li>
                <a
                  href="post1"
                  rel="prev"
                >
                  ← post1
                </a>
              </li>
              <li>
                <a
                  href="post3"
                  rel="next"
                >
                  post3 →
                </a>
              </li>
            </ul>
          </nav>
        </main>
        <footer>
          © 2021, Built with 
          <a
            href="https://www.gatsbyjs.org"
          >
            Gatsby
          </a>
           Hosted on 
          <a
            href="https://pages.github.com/"
          >
            GitHub Pages
          </a>
        </footer>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="margin-left: auto; margin-right: auto; max-width: 42rem; padding: 2.625rem 1.3125rem;"
    >
      <header>
        <h3
          style="font-family: Montserrat, sans-serif; margin-top: 0px;"
        >
          <a
            href="/"
            style="box-shadow: none;"
          >
            post2
          </a>
        </h3>
      </header>
      <main>
        <article>
          <header>
            <h1
              style="margin-top: 1.75rem; margin-bottom: 0px;"
            >
              post2
            </h1>
            <p
              style="font-size: 0.83255rem; line-height: 1.75rem; display: block; margin-bottom: 1.75rem;"
            >
              Apr 11, 2021
            </p>
          </header>
          <div
            class="gatsby-image-wrapper gatsby-image-wrapper-constrained"
            data-gatsby-image-wrapper=""
            style="position: relative; overflow: hidden; display: inline-block;"
          >
            <div
              style="max-width: 628px; display: block;"
            >
              <img
                alt=""
                aria-hidden="true"
                role="presentation"
                src="data:image/svg+xml;charset=utf-8,%3Csvg height='396' width='628' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                style="max-width: 100%; display: block; position: static;"
              />
            </div>
            <div
              aria-hidden="true"
              data-placeholder-image=""
              style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
            />
            <picture>
              <source
                data-srcset="//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=157&h=99&q=50&fm=webp 157w,//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=314&h=198&q=50&fm=webp 314w,//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=628&h=396&q=50&fm=webp 628w"
                sizes="(min-width: 628px) 628px, 100vw"
                type="image/webp"
              />
              <img
                alt="post2"
                data-gatsby-image-ssr=""
                data-main-image=""
                data-src="//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=628&h=396&q=50&fm=png"
                data-srcset="//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=157&h=99&q=50&fm=png 157w,//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=314&h=198&q=50&fm=png 314w,//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=628&h=396&q=50&fm=png 628w"
                decoding="async"
                loading="lazy"
                sizes="(min-width: 628px) 628px, 100vw"
                style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
              />
            </picture>
            <noscript />
            <script
              type="module"
            >
              const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
            </script>
          </div>
          <section>
            <h1>
              Test HTML
            </h1>
          </section>
          <hr
            style="margin-bottom: 1.75rem;"
          />
          <footer>
            <div
              style="display: flex; margin-bottom: 4.375rem;"
            >
              <div
                class="gatsby-image-wrapper"
                data-gatsby-image-wrapper=""
                style="position: relative; overflow: hidden; width: 150px; height: 150px; margin-right: 0.875rem; margin-bottom: 0px; min-width: 50px; border-radius: 100%;"
              >
                <div
                  aria-hidden="true"
                  data-placeholder-image=""
                  style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                />
                <picture>
                  <source
                    data-srcset="//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=750&h=500&q=50&fm=webp 750w,//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=1500&h=1000&q=50&fm=webp 1500w,//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=3000&h=2000&q=50&fm=webp 3000w"
                    sizes="(min-width: 3000px) 3000px, 100vw"
                    type="image/webp"
                  />
                  <img
                    alt="author name"
                    data-gatsby-image-ssr=""
                    data-main-image=""
                    data-src="//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=3000&h=2000&fl=progressive&q=50&fm=jpg"
                    data-srcset="//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=750&h=500&fl=progressive&q=50&fm=jpg 750w,//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=1500&h=1000&fl=progressive&q=50&fm=jpg 1500w,//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=3000&h=2000&fl=progressive&q=50&fm=jpg 3000w"
                    decoding="async"
                    loading="lazy"
                    sizes="(min-width: 3000px) 3000px, 100vw"
                    style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
                  />
                </picture>
                <noscript />
                <script
                  type="module"
                >
                  const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                </script>
              </div>
              <p>
                Written by 
                <strong>
                  author name
                </strong>
                <span>
                  body html
                </span>
              </p>
            </div>
          </footer>
        </article>
        <nav>
          <ul
            style="display: flex; flex-wrap: wrap; justify-content: space-between; list-style: none; padding: 0px;"
          >
            <li>
              <a
                href="post1"
                rel="prev"
              >
                ← post1
              </a>
            </li>
            <li>
              <a
                href="post3"
                rel="next"
              >
                post3 →
              </a>
            </li>
          </ul>
        </nav>
      </main>
      <footer>
        © 2021, Built with 
        <a
          href="https://www.gatsbyjs.org"
        >
          Gatsby
        </a>
         Hosted on 
        <a
          href="https://pages.github.com/"
        >
          GitHub Pages
        </a>
      </footer>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Blog Post Template Should render correctly with missing body html 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="margin-left: auto; margin-right: auto; max-width: 42rem; padding: 2.625rem 1.3125rem;"
      >
        <header>
          <h3
            style="font-family: Montserrat, sans-serif; margin-top: 0px;"
          >
            <a
              href="/"
              style="box-shadow: none;"
            >
              post2
            </a>
          </h3>
        </header>
        <main>
          <article>
            <header>
              <h1
                style="margin-top: 1.75rem; margin-bottom: 0px;"
              >
                post2
              </h1>
              <p
                style="font-size: 0.83255rem; line-height: 1.75rem; display: block; margin-bottom: 1.75rem;"
              >
                Apr 11, 2021
              </p>
            </header>
            <div
              class="gatsby-image-wrapper gatsby-image-wrapper-constrained"
              data-gatsby-image-wrapper=""
              style="position: relative; overflow: hidden; display: inline-block;"
            >
              <div
                style="max-width: 628px; display: block;"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  role="presentation"
                  src="data:image/svg+xml;charset=utf-8,%3Csvg height='396' width='628' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                  style="max-width: 100%; display: block; position: static;"
                />
              </div>
              <div
                aria-hidden="true"
                data-placeholder-image=""
                style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
              />
              <picture>
                <source
                  data-srcset="//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=157&h=99&q=50&fm=webp 157w,//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=314&h=198&q=50&fm=webp 314w,//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=628&h=396&q=50&fm=webp 628w"
                  sizes="(min-width: 628px) 628px, 100vw"
                  type="image/webp"
                />
                <img
                  alt="post2"
                  data-gatsby-image-ssr=""
                  data-main-image=""
                  data-src="//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=628&h=396&q=50&fm=png"
                  data-srcset="//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=157&h=99&q=50&fm=png 157w,//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=314&h=198&q=50&fm=png 314w,//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=628&h=396&q=50&fm=png 628w"
                  decoding="async"
                  loading="lazy"
                  sizes="(min-width: 628px) 628px, 100vw"
                  style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
                />
              </picture>
              <noscript />
              <script
                type="module"
              >
                const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
              </script>
            </div>
            <section />
            <hr
              style="margin-bottom: 1.75rem;"
            />
            <footer>
              <div
                style="display: flex; margin-bottom: 4.375rem;"
              >
                <div
                  class="gatsby-image-wrapper"
                  data-gatsby-image-wrapper=""
                  style="position: relative; overflow: hidden; width: 150px; height: 150px; margin-right: 0.875rem; margin-bottom: 0px; min-width: 50px; border-radius: 100%;"
                >
                  <div
                    aria-hidden="true"
                    data-placeholder-image=""
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=750&h=500&q=50&fm=webp 750w,//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=1500&h=1000&q=50&fm=webp 1500w,//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=3000&h=2000&q=50&fm=webp 3000w"
                      sizes="(min-width: 3000px) 3000px, 100vw"
                      type="image/webp"
                    />
                    <img
                      alt="author name"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=3000&h=2000&fl=progressive&q=50&fm=jpg"
                      data-srcset="//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=750&h=500&fl=progressive&q=50&fm=jpg 750w,//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=1500&h=1000&fl=progressive&q=50&fm=jpg 1500w,//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=3000&h=2000&fl=progressive&q=50&fm=jpg 3000w"
                      decoding="async"
                      loading="lazy"
                      sizes="(min-width: 3000px) 3000px, 100vw"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                  </script>
                </div>
                <p>
                  Written by 
                  <strong>
                    author name
                  </strong>
                  <span>
                    body html
                  </span>
                </p>
              </div>
            </footer>
          </article>
          <nav>
            <ul
              style="display: flex; flex-wrap: wrap; justify-content: space-between; list-style: none; padding: 0px;"
            >
              <li>
                <a
                  href="post1"
                  rel="prev"
                >
                  ← post1
                </a>
              </li>
              <li>
                <a
                  href="post3"
                  rel="next"
                >
                  post3 →
                </a>
              </li>
            </ul>
          </nav>
        </main>
        <footer>
          © 2021, Built with 
          <a
            href="https://www.gatsbyjs.org"
          >
            Gatsby
          </a>
           Hosted on 
          <a
            href="https://pages.github.com/"
          >
            GitHub Pages
          </a>
        </footer>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="margin-left: auto; margin-right: auto; max-width: 42rem; padding: 2.625rem 1.3125rem;"
    >
      <header>
        <h3
          style="font-family: Montserrat, sans-serif; margin-top: 0px;"
        >
          <a
            href="/"
            style="box-shadow: none;"
          >
            post2
          </a>
        </h3>
      </header>
      <main>
        <article>
          <header>
            <h1
              style="margin-top: 1.75rem; margin-bottom: 0px;"
            >
              post2
            </h1>
            <p
              style="font-size: 0.83255rem; line-height: 1.75rem; display: block; margin-bottom: 1.75rem;"
            >
              Apr 11, 2021
            </p>
          </header>
          <div
            class="gatsby-image-wrapper gatsby-image-wrapper-constrained"
            data-gatsby-image-wrapper=""
            style="position: relative; overflow: hidden; display: inline-block;"
          >
            <div
              style="max-width: 628px; display: block;"
            >
              <img
                alt=""
                aria-hidden="true"
                role="presentation"
                src="data:image/svg+xml;charset=utf-8,%3Csvg height='396' width='628' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                style="max-width: 100%; display: block; position: static;"
              />
            </div>
            <div
              aria-hidden="true"
              data-placeholder-image=""
              style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
            />
            <picture>
              <source
                data-srcset="//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=157&h=99&q=50&fm=webp 157w,//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=314&h=198&q=50&fm=webp 314w,//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=628&h=396&q=50&fm=webp 628w"
                sizes="(min-width: 628px) 628px, 100vw"
                type="image/webp"
              />
              <img
                alt="post2"
                data-gatsby-image-ssr=""
                data-main-image=""
                data-src="//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=628&h=396&q=50&fm=png"
                data-srcset="//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=157&h=99&q=50&fm=png 157w,//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=314&h=198&q=50&fm=png 314w,//images.ctfassets.net/yy5lveaxjicl/5wc4kuJb2nL14aLQsr0tNk/ba395bd96a73b832eb2ac6a1a02f170f/image.png?w=628&h=396&q=50&fm=png 628w"
                decoding="async"
                loading="lazy"
                sizes="(min-width: 628px) 628px, 100vw"
                style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
              />
            </picture>
            <noscript />
            <script
              type="module"
            >
              const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
            </script>
          </div>
          <section />
          <hr
            style="margin-bottom: 1.75rem;"
          />
          <footer>
            <div
              style="display: flex; margin-bottom: 4.375rem;"
            >
              <div
                class="gatsby-image-wrapper"
                data-gatsby-image-wrapper=""
                style="position: relative; overflow: hidden; width: 150px; height: 150px; margin-right: 0.875rem; margin-bottom: 0px; min-width: 50px; border-radius: 100%;"
              >
                <div
                  aria-hidden="true"
                  data-placeholder-image=""
                  style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                />
                <picture>
                  <source
                    data-srcset="//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=750&h=500&q=50&fm=webp 750w,//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=1500&h=1000&q=50&fm=webp 1500w,//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=3000&h=2000&q=50&fm=webp 3000w"
                    sizes="(min-width: 3000px) 3000px, 100vw"
                    type="image/webp"
                  />
                  <img
                    alt="author name"
                    data-gatsby-image-ssr=""
                    data-main-image=""
                    data-src="//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=3000&h=2000&fl=progressive&q=50&fm=jpg"
                    data-srcset="//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=750&h=500&fl=progressive&q=50&fm=jpg 750w,//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=1500&h=1000&fl=progressive&q=50&fm=jpg 1500w,//images.ctfassets.net/yy5lveaxjicl/7orLdboQQowIUs22KAW4U/8062cc92daeecfeb308f317f7f7d3dd9/matt-palmer-254999.jpg?w=3000&h=2000&fl=progressive&q=50&fm=jpg 3000w"
                    decoding="async"
                    loading="lazy"
                    sizes="(min-width: 3000px) 3000px, 100vw"
                    style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
                  />
                </picture>
                <noscript />
                <script
                  type="module"
                >
                  const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                </script>
              </div>
              <p>
                Written by 
                <strong>
                  author name
                </strong>
                <span>
                  body html
                </span>
              </p>
            </div>
          </footer>
        </article>
        <nav>
          <ul
            style="display: flex; flex-wrap: wrap; justify-content: space-between; list-style: none; padding: 0px;"
          >
            <li>
              <a
                href="post1"
                rel="prev"
              >
                ← post1
              </a>
            </li>
            <li>
              <a
                href="post3"
                rel="next"
              >
                post3 →
              </a>
            </li>
          </ul>
        </nav>
      </main>
      <footer>
        © 2021, Built with 
        <a
          href="https://www.gatsbyjs.org"
        >
          Gatsby
        </a>
         Hosted on 
        <a
          href="https://pages.github.com/"
        >
          GitHub Pages
        </a>
      </footer>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
